fixing alignment for skills container for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -433,6 +433,9 @@ body {
         width: 90%; 
         height: auto; 
         margin-top: 10%;
+        height: auto; 
+        display: grid;
+        justify-items: center;
     }
 }
 @media screen and (min-width: 481px) {
@@ -492,7 +495,7 @@ body {
         height: auto;
         margin-top: 12%;
         text-align: center;
-        margin-right: -10%;
+        margin-right: -15%;
     }
 }
 @media screen and (min-width: 481px) {
@@ -544,8 +547,7 @@ body {
         text-align: center;
         font-size: 20px;
         margin-top: 12%;
-        margin-left: auto;
-        margin-right: auto;
+        margin-right: -15%;
     }
 }
 @media screen and (min-width: 481px) {
